fix(GeoJsonDataset): handle empty feature collection